release script: build fix